Update BenefitsBar to use local DA20 Eclipse hangar image

--- a/src/components/ui/BenefitsBar.astro
+++ b/src/components/ui/BenefitsBar.astro
@@ -13,8 +13,8 @@ import StatsCounter from './islands/StatsCounter';
       </div>
       <div class="relative rounded-xl overflow-hidden aspect-square">
         <img
-          src="https://images.unsplash.com/photo-1587293852726-70cdb56c2866?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80"
-          alt="Flight instructor teaching student pilot"
+          src="/images/aircraft/da20-eclipse-hangar.jpg"
+          alt="Diamond DA20 Eclipse aircraft in hangar at Centerline Flight Training"
           class="w-full h-full object-cover"
         />
       </div>
