--- a/src/components/ui/BenefitsBar.astro
+++ b/src/components/ui/BenefitsBar.astro
@@ -2,9 +2,9 @@
 import StatsCounter from './islands/StatsCounter';
 ---
 
-<section class="bg-white pt-[120px] pb-[100px] relative z-10">
-  <div class="max-w-[1200px] mx-auto px-8">
-    <div class="flex flex-col lg:flex-row gap-[100px] items-center justify-center w-full h-min p-0 mb-16 relative overflow-hidden">
+<section class="bg-white pt-16 md:pt-[120px] pb-20 md:pb-[100px] relative z-10">
+  <div class="max-w-[1200px] mx-auto px-5 md:px-8">
+    <div class="flex flex-col lg:flex-row gap-12 lg:gap-[100px] items-center justify-center w-full h-min p-0 mb-16 relative overflow-hidden">
       <div class="text-left">
         <h2 class="font-heading text-[24px] md:text-[32px] font-normal leading-[1.3] text-gray-800 mb-6">
           Zero to airline pilot in 18-24 months. We'll get you there. 
