--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -175,3 +175,13 @@ html {
   transform: rotate(180deg);
 }
 
+/* Hide scrollbar for mobile carousel */
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
