--- a/src/components/ui/CtaBand.astro
+++ b/src/components/ui/CtaBand.astro
@@ -14,7 +14,7 @@
   <!-- Background Image with Overlay -->
   <div 
     class="absolute inset-0 z-0 cta-bg-image"
-    style="background-image: url('https://pub-b9b491aee0b94c2c8e6c5d1dde4848db.r2.dev/public/images/aircraft/call%20to%20action%20banner%20(in%20flight).png'); background-size: cover; background-position: center;"
+    style="background-image: url('https://pub-b9b491aee0b94c2c8e6c5d1dde4848db.r2.dev/public/images/aircraft/airplane%20flying%20over%20sunset%20reflective%20lake.avif'); background-size: cover; background-position: center;"
   ></div>
   <div class="absolute inset-0 bg-black/70 z-0"></div>
 
