--- a/src/components/ui/CtaBand.astro
+++ b/src/components/ui/CtaBand.astro
@@ -25,7 +25,7 @@
       Take the first step toward your pilot career with a discovery flight today
     </p>
     <div class="flex gap-4 justify-center flex-wrap">
-      <a href="#discovery" class="cta-button font-heading">Book Discovery Flight</a>
+      <a href="/contact" class="cta-button font-heading" data-astro-prefetch="tap">Book Discovery Flight</a>
     </div>
   </div>
 </section>
